--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -1,8 +1,10 @@
-name: Sitecore goto XDB GOAT Deployment
+name: slack-integration
 
 on:
   push:
     branches: -main
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,7 +23,7 @@ jobs:
               "attachments": [
                 {
                   "fallback": "Deploy following *${{ inputs.release_version }}* to *${{ inputs.environment }}*",
-                  "color": "${{ job.status == 'success' && '#36A64F' || '#FF0000' }}",
+                  "color": "good",
                   "fields": [
                     {
                       "title": "*Job Status*",
@@ -50,7 +52,7 @@ jobs:
                     },
                     {
                       "title": "*Webapp URL*",
-                      "value": "<https://${{ matrix.AZURE_Details.webapp_name }}.azurewebsites.net|${{ matrix.AZURE_Details.webapp_name }}.azurewebsites.net>",
+                      "value": "<https://${{ matrix.AZURE_Details.webapp_name }}|${{ matrix.AZURE_Details.webapp_name }}.azurewebsites.net>",
                       "short": true
                     }
                   ]
