--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -1,48 +1,29 @@
-name: slack-integration
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send a slack notification for the deployment
-        id: slack
-        uses: slackapi/slack-github-action@v1.27.0
-        with:
-          # This data can be any valid JSON from a previous step in the GitHub Action
-          payload: |
-            {
-              "channel": "#website",
-              "attachments": [
-                  {
-                      "fallback": "Plain-text summary of the attachment.",
-                      "color": "#2eb886",
-                      "pretext": "Optional text that appears above the attachment block",
-                      "author_name": "Bobby Tables",
-                      "author_link": "http://flickr.com/bobby/",
-                      "author_icon": "http://flickr.com/icons/bobby.jpg",
-                      "title": "Slack API Documentation",
-                      "title_link": "https://api.slack.com/",
-                      "text": "Optional text that appears within the attachment",
-                      "fields": [
-                          {
-                              "title": "Priority",
-                              "value": "High",
-                              "short": false
-                          }
-                      ],
-                      "image_url": "http://my-website.com/path/to/image.jpg",
-                      "thumb_url": "http://example.com/path/to/thumb.png",
-                      "footer": "Slack API",
-                      "footer_icon": "https://platform.slack-edge.com/img/default_application_icon.png",
-                      "ts": 123456789
-                  }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+{
+    "channel": "C123ABC456",
+    "text":"sa",
+    "attachments": [
+        {
+            "fallback": "Plain-text summary of the attachment.",
+            "color": "#2eb886",
+            "pretext": "Optional text that appears above the attachment block",
+            "author_name": "Bobby Tables",
+            "author_link": "http://flickr.com/bobby/",
+            "author_icon": "http://flickr.com/icons/bobby.jpg",
+            "title": "Slack API Documentation",
+            "title_link": "https://api.slack.com/",
+            "text": "Optional text that appears within the attachment",
+            "fields": [
+                {
+                    "title": "Priority",
+                    "value": "High",
+                    "short": false
+                }
+            ],
+            "image_url": "http://my-website.com/path/to/image.jpg",
+            "thumb_url": "http://example.com/path/to/thumb.png",
+            "footer": "Slack API",
+            "footer_icon": "https://platform.slack-edge.com/img/default_application_icon.png",
+            "ts": 123456789
+        }
+    ]
+}
