--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -10,40 +10,73 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Debug payload
+        id: debug-payload
+        run: |
+          echo 'Payload being sent to Slack:'
+          echo '{
+            "channel": "C123ABC456",
+            "text": "",
+            "attachments": [
+              {
+                "fallback": "Plain-text summary of the attachment.",
+                "color": "#2eb886",
+                "pretext": "Optional text that appears above the attachment block",
+                "author_name": "Bobby Tables",
+                "author_link": "http://flickr.com/bobby/",
+                "author_icon": "http://flickr.com/icons/bobby.jpg",
+                "title": "Slack API Documentation",
+                "title_link": "https://api.slack.com/",
+                "text": "Optional text that appears within the attachment",
+                "fields": [
+                  {
+                    "title": "Priority",
+                    "value": "High",
+                    "short": false
+                  }
+                ],
+                "image_url": "http://my-website.com/path/to/image.jpg",
+                "thumb_url": "http://example.com/path/to/thumb.png",
+                "footer": "Slack API",
+                "footer_icon": "https://platform.slack-edge.com/img/default_application_icon.png",
+                "ts": 123456789
+              }
+            ]
+          }'
+
       - name: Send a slack notification for the deployment
         id: slack
         uses: slackapi/slack-github-action@v1.27.0
         with:
-          # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
             {
-                "channel": "C123ABC456",
-                "text": "sa",
-                "attachments": [
+              "channel": "C123ABC456",
+              "text": "",
+              "attachments": [
+                {
+                  "fallback": "Plain-text summary of the attachment.",
+                  "color": "#2eb886",
+                  "pretext": "Optional text that appears above the attachment block",
+                  "author_name": "Bobby Tables",
+                  "author_link": "http://flickr.com/bobby/",
+                  "author_icon": "http://flickr.com/icons/bobby.jpg",
+                  "title": "Slack API Documentation",
+                  "title_link": "https://api.slack.com/",
+                  "text": "Optional text that appears within the attachment",
+                  "fields": [
                     {
-                        "fallback": "Plain-text summary of the attachment.",
-                        "color": "#2eb886",
-                        "pretext": "Optional text that appears above the attachment block",
-                        "author_name": "Bobby Tables",
-                        "author_link": "http://flickr.com/bobby/",
-                        "author_icon": "http://flickr.com/icons/bobby.jpg",
-                        "title": "Slack API Documentation",
-                        "title_link": "https://api.slack.com/",
-                        "text": "Optional text that appears within the attachment",
-                        "fields": [
-                            {
-                                "title": "Priority",
-                                "value": "High",
-                                "short": false
-                            }
-                        ],
-                        "image_url": "http://my-website.com/path/to/image.jpg",
-                        "thumb_url": "http://example.com/path/to/thumb.png",
-                        "footer": "Slack API",
-                        "footer_icon": "https://platform.slack-edge.com/img/default_application_icon.png",
-                        "ts": 123456789
+                      "title": "Priority",
+                      "value": "High",
+                      "short": false
                     }
-                ]
+                  ],
+                  "image_url": "http://my-website.com/path/to/image.jpg",
+                  "thumb_url": "http://example.com/path/to/thumb.png",
+                  "footer": "Slack API",
+                  "footer_icon": "https://platform.slack-edge.com/img/default_application_icon.png",
+                  "ts": 123456789
+                }
+              ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
