--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -25,7 +25,7 @@ jobs:
                     "color": "#2eb886",
                     "pretext": "Optional text that appears above the attachment block",
                     "author_name": "Bobby Tables",
-                    "author_link": "http://flickr.com/bobby/",
+                    "author_link": "http://flickr.com/bobby/"
                 }
               ]
             }
