--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -12,12 +12,12 @@ jobs:
     steps:
       - name: Send a slack notification for the deployment
         id: slack
-        uses: slackapi/slack-github-action@v2.0.0
+        uses: slackapi/slack-github-action@v1.28.0
         with:
           # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
             {
-              "channel": "C123ABC456",
+              "channel": "#website",
               "text": "das",
               "attachments": [
                 {
@@ -25,7 +25,7 @@ jobs:
                     "color": "#2eb886",
                     "pretext": "Optional text that appears above the attachment block",
                     "author_name": "Bobby Tables",
-                    "author_link": "http://flickr.com/bobby/"
+                    "author_link": "http://flickr.com/bobby/",
                 }
               ]
             }
