--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -12,9 +12,11 @@ jobs:
     steps:
       - name: Send a slack notification for the deployment
         id: slack
-        uses: slackapi/slack-github-action@v1.28.0
+        uses: slackapi/slack-github-action@v2.0.0
         with:
           # This data can be any valid JSON from a previous step in the GitHub Action
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
           payload: |
             {
               "channel": "#website",
@@ -29,9 +31,3 @@ jobs:
                 }
               ]
             }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-      - name: Debug payload
-        run: |
-          echo 'Payload:'
-          echo '${{ toJson(fromJson(steps.slack.outputs.payload)) }}'
