--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -13,10 +13,11 @@ jobs:
       - name: Send a slack notification for the deployment
         id: slack
         uses: slackapi/slack-github-action@v2.0.0
-        with:
-          slack-webhook-url: ${{ secrets.SLACK_WEBHOOK }}  # Reference secret for security
+        with: # Reference secret for security
           channel: "#website"
           text: "das"
+          webhook: ${{ secrets.SLACK_WEBHOOK }}
+          webhook-type: incoming-webhook
           attachments: |
             [
               {
