--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -10,35 +10,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Send a slack notification for the deployment
-        id: slack
+      - name: Send message to Slack via Webhook with Attachments
         uses: slackapi/slack-github-action@v2.0.0
-        with: # Reference secret for security
-          webhook: ${{ secrets.SLACK_WEBHOOK }}
-          webhook-type: incoming-webhook
-          attachments: |
-            [
-              {
-                "fallback": "Plain-text summary of the attachment.",
-                "color": "#2eb886",
-                "pretext": "Optional text that appears above the attachment block",
-                "author_name": "Bobby Tables",
-                "author_link": "http://flickr.com/bobby/",
-                "author_icon": "http://flickr.com/icons/bobby.jpg",
-                "title": "Slack API Documentation",
-                "title_link": "https://api.slack.com/",
-                "text": "Optional text that appears within the attachment",
-                "fields": [
-                  {
-                    "title": "Priority",
-                    "value": "High",
-                    "short": false
-                  }
-                ],
-                "image_url": "http://my-website.com/path/to/image.jpg",
-                "thumb_url": "http://example.com/path/to/thumb.png",
-                "footer": "Slack API",
-                "footer_icon": "https://platform.slack-edge.com/img/default_application_icon.png",
-                "ts": 123456789
-              }
-            ]
+        with:
+          payload: |
+            {
+              "text": "A new commit has been pushed!",
+              "attachments": [
+                {
+                  "fallback": "Commit details",
+                  "color": "#36a64f",
+                  "pretext": "Here are the commit details:",
+                  "text": "Commit message: `Test commit message`",
+                  "footer": "GitHub",
+                  "ts": 123456789
+                }
+              ]
+            }
+          slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
