--- a/.github/workflows/slack-integration.yaml
+++ b/.github/workflows/slack-integration.yaml
@@ -18,6 +18,7 @@ jobs:
           payload: |
             {
               "text": "A new commit has been pushed!",
+              "channel": "#website"
               "attachments": [
                 {
                   "fallback": "Commit details",
